[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/CraftingLab/CraftingLab.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BodyPart/BodyPart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BodyPart/Head03.png" type="Texture" id=3]
[ext_resource path="res://Scenes/BodyPart/Body03.png" type="Texture" id=4]
[ext_resource path="res://Scenes/BodyPart/Tail01.png" type="Texture" id=5]
[ext_resource path="res://Scenes/BodyPart/Legs02.png" type="Texture" id=6]
[ext_resource path="res://Scenes/CraftingLab/BodyParts.gd" type="Script" id=7]
[ext_resource path="res://Scenes/CraftingLab/StagedBodyParts.gd" type="Script" id=8]

[node name="CraftingLab" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BodyParts" type="Node" parent="."]

[node name="BodyPart" parent="BodyParts" instance=ExtResource( 2 )]
visible = false
part_name = "Lizard Head"
weight = 45.0
icon = ExtResource( 3 )

[node name="BodyPart2" parent="BodyParts" instance=ExtResource( 2 )]
visible = false
part_name = "Lizard Torso"
category = 1
weight = 60.0
icon = ExtResource( 4 )

[node name="BodyPart3" parent="BodyParts" instance=ExtResource( 2 )]
visible = false
part_name = "Lizard Tail"
category = 3
weight = 35.0
icon = ExtResource( 5 )

[node name="BodyPart4" parent="BodyParts" instance=ExtResource( 2 )]
visible = false
part_name = "Lizard Legs"
category = 2
weight = 20.0
icon = ExtResource( 6 )

[node name="Control" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Control"]
visible = false
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="Panel2" type="Panel" parent="Control"]
visible = false
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_right = 222.0
margin_bottom = 360.0

[node name="BodyParts" type="ItemList" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 222.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="CraftingBudgetLabel" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 222.0
margin_bottom = 360.0
text = "CRAFTING BUDGET LEFT: 100 / 100"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 226.0
margin_right = 517.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReturnToMainButton" type="Button" parent="Control/HBoxContainer/MarginContainer"]
margin_left = 92.0
margin_top = 340.0
margin_right = 198.0
margin_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Return to Main"

[node name="CreaturePreviewContainer" type="Node2D" parent="Control/HBoxContainer/MarginContainer"]
position = Vector2( -116, 180 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 521.0
margin_right = 640.0
margin_bottom = 360.0

[node name="StagedBodyParts" type="ItemList" parent="Control/HBoxContainer/VBoxContainer2"]
margin_right = 119.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="CraftCreatureButton" type="Button" parent="Control/HBoxContainer/VBoxContainer2"]
margin_top = 340.0
margin_right = 119.0
margin_bottom = 360.0
text = "CRAFT CREATURE"

[connection signal="pressed" from="Control/HBoxContainer/MarginContainer/ReturnToMainButton" to="." method="_on_ReturnToMainButton_pressed"]
